- Fixed hamburger menu button color contrast accessibility issue - Added search box top property calculation on the scroll when search box is open

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.6 -  8/8/2019 
+ * CA State Template v5.5 -  @version v5.5.6 -  8/27/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -13637,6 +13637,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
   padding: 0;
   width: 52px;
   cursor: pointer;
+  color: #fff;
 }
 
 .mobile-controls .toggle-search {
